--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jest": "^24.9.0",
     "style-loader": "^1.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^3.0.0",
     "webpack": "4.39.3",
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.8.0"
