--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "mapbox-gl": "^1.7.0",
     "popper.js": "^1.16.1",
     "serialize-javascript": "^2.1.1"
   }
